--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 15px;
   left: 15px;
   padding: 10px 0;
+  height: 408px;
   border-radius: 10px;
   background-color: #fff;
   overflow-y: auto;
@@ -266,9 +267,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg1.jpg") top right;
+  background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
-  position: relative;
+  position:relative ;
 }
 #hero:before {
   content: "";
@@ -522,7 +523,7 @@ section {
   color: #82909c;
 }
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/Me.jpeg") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
@@ -1116,7 +1117,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/Footer.jpg") top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
@@ -1152,7 +1153,7 @@ section {
   margin: 0 0 40px 0;
 }
 #footer .social-links {
-  margin: 0 0 40px 0;
+  margin: 0 0 0 0;
 }
 #footer .social-links a {
   font-size: 18px;
