--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,16 +293,19 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 15px;
 }
 #hero h1 {
+  /* padding-left: 128px;
+  padding-right: 128px; */
   margin: 0 0 10px 0;
   font-size: 64px;
   font-family: "Satisfy", serif;
   color: #fff;
+  text-align: center;
 }
 #hero h2 {
   color: #eee;
   margin-bottom: 50px;
-  font-size: 13px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 4  00;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
@@ -353,7 +356,7 @@ h1, h2, h3, h4, h5, h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 64px 0;
 }
 
 .section-bg {
@@ -362,14 +365,14 @@ section {
 
 .section-title {
   text-align: center;
-  padding: 30px 0;
+  padding: 32px 0;
   position: relative;
 }
 .section-title h2 {
   font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   padding-bottom: 0;
   color: #3b434a;
   position: relative;
